patchpanel: client: use correct dbus method name for dbus conf
Change the dbus method conf name from GetNetworkClientsInfo to
GetDownStreamNetworkInfo to align with the one used in the code.

TEST=FEATURES=test emerge-$BOARD patchpanel-client
BUG=b:331679643

Change-Id: I9e0bb267852c55a9db861e1689796fa35b1fa8ad
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5410994
Commit-Queue: Jintao Lin <jintaolin@chromium.org>
Tested-by: Jintao Lin <jintaolin@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Reviewed-by: Kevin Lund <kglund@google.com>

--- a/patchpanel/dbus/org.chromium.Patchpanel.conf
+++ b/patchpanel/dbus/org.chromium.Patchpanel.conf
@@ -115,7 +115,7 @@
          CreateTetheredNetwork. -->
     <allow send_destination="org.chromium.PatchPanel"
            send_interface="org.chromium.PatchPanel"
-           send_member="GetNetworkClientsInfo" />
+           send_member="GetDownstreamNetworkInfo" />
   </policy>
   <policy user="devbroker">
     <!-- Single iptables control method used by permission_broker as a backend
