--- a/debugd/BUILD.gn
+++ b/debugd/BUILD.gn
@@ -53,6 +53,7 @@ debugd_helpers_install_path = "/usr/libexec/debugd/helpers"
 pkg_config("target_defaults") {
   defines = [
     "USE_CELLULAR=${use.cellular}",
+    "USE_FBPREPROCESSORD=${use.fbpreprocessord}",
     "USE_IWLWIFI_DUMP=${use.iwlwifi_dump}",
   ]
 
