--- a/metrics/structured/BUILD.gn
+++ b/metrics/structured/BUILD.gn
@@ -83,13 +83,11 @@ source_set("libsm") {
   deps = [ ":libsm_proto" ]
 }
 
-shared_library("libstructuredmetrics") {
+source_set("structured_metrics") {
   sources = [
     "c_structured_metrics.cc",
     "event_base.cc",
     "event_base.h",
-    "fake_recorder.cc",
-    "fake_recorder.h",
     "key_data.cc",
     "key_data.h",
     "persistent_proto.cc",
@@ -101,15 +99,30 @@ shared_library("libstructuredmetrics") {
     "recorder_singleton.h",
   ]
 
-  # Also include the generated event files.
-  sources += get_target_outputs(":gen_structured_events")
+  configs += [
+    ":target_defaults_pkg_deps",
+
+    # -fPIC flag needed for linking to shared library.
+    "//common-mk:pic",
+  ]
+
+  deps = [
+    ":libsm_proto",
+    ":storage",
+    "//metrics:libmetrics",
+  ]
+}
+
+source_set("test_support") {
+  sources = [
+    "fake_recorder.cc",
+    "fake_recorder.h",
+  ]
 
   configs += [ ":target_defaults_pkg_deps" ]
 
   deps = [
-    ":gen_structured_events",
-    ":libsm_proto",
-    ":storage",
+    ":structured_metrics",
     "//metrics:libmetrics",
   ]
 }
@@ -122,7 +135,11 @@ if (use.test) {
     sources = [
       "lib/key_data_file_delegate_test.cc",
       "lib/persistent_proto_test.cc",
+      "recorder_impl_test.cc",
     ]
+
+    sources += get_target_outputs(":gen_structured_events")
+
     configs += [
       "//common-mk:test",
       ":libchrome_test_config",
@@ -130,11 +147,27 @@ if (use.test) {
     ]
     run_test = true
     deps = [
+      ":gen_structured_events",
       ":libsm",
       ":libsm_proto",
+      ":storage",
+      ":structured_metrics",
+      ":test_support",
       "//common-mk/testrunner:testrunner",
+      "//metrics:metrics_test_support",
     ]
   }
+}
+
+shared_library("libstructuredmetrics") {
+  sources = get_target_outputs(":gen_structured_events")
+
+  configs += [ ":target_defaults_pkg_deps" ]
+
+  deps = [
+    ":gen_structured_events",
+    ":structured_metrics",
+  ]
 }
 
 # Install missing headers using new approach to be able to use mock recorder
