regmon: Initial metric sender for policy violations
This CL implements and tests a metrics sender class, which sends a
sparse metric consisting of the unique annotation hash whenever a policy
violation is reported from the sender (chrome).

BUG=b:330769170
TEST=emerge-${BOARD} chromeos-base/regmon
TEST=cros_run_unit_tests --board=${BOARD} --packages chromeos-base/regmon

Cq-Depend: chromium:5427460
Change-Id: If79214fb61681bbb881491d9ba79781976b029d0
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5427458
Tested-by: Chris Mullins <crmullins@chromium.org>
Reviewed-by: Aiden Chiavatti <chiav@chromium.org>
Commit-Queue: Chris Mullins <crmullins@chromium.org>
Reviewed-by: Jason Ling <jasonling@chromium.org>

--- a/regmon/BUILD.gn
+++ b/regmon/BUILD.gn
@@ -34,6 +34,7 @@ executable("regmond") {
   deps = [
     "//regmon/daemon:regmon_daemon",
     "//regmon/dbus:dbus_adaptor",
+    "//regmon/metrics:metrics_reporter",
     "//regmon/regmon:regmon_impl",
     "//regmon/regmon:regmon_service",
   ]
@@ -82,6 +83,7 @@ if (use.test) {
     deps = [
       "//common-mk/testrunner",
       "//regmon/daemon:unit_tests",
+      "//regmon/metrics:unit_tests",
     ]
   }
 }
