--- a/regmon/init/minijail/regmond.conf
+++ b/regmon/init/minijail/regmond.conf
@@ -34,7 +34,9 @@ e
 S = /usr/share/policy/regmond-seccomp.policy
 profile = minimalistic-mountns
 mount = none,/run,tmpfs,MS_NODEV|MS_NOEXEC|MS_NOSUID,mode=755,size=10M
+mount = /var,/var,tmpfs,MS_NODEV|MS_NOEXEC|MS_NOSUID,mode=755,size=100M
 mount = /run/daemon-store/regmond,/run/daemon-store/regmond,none,MS_BIND|MS_REC
 mount = /run/daemon-store-cache/regmond,/run/daemon-store-cache/regmond,none,MS_BIND|MS_REC
 bind-mount = /run/dbus
+bind-mount = /var/lib/metrics,,1
 uts
