resourced: Add base_slice_ns config
In this change we set the EEVDF scheduler base_slice_ns to a minimum
of 6ms based on testing results.

BUG=b:328501200
TEST=manual tested on dut

Change-Id: Ia1f1a4abb041b0db78a7e59db1a5b9f701b7f056
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5417082
Reviewed-by: David Stevens <stevensd@chromium.org>
Commit-Queue: Youssef Esmat <youssefesmat@chromium.org>
Tested-by: Youssef Esmat <youssefesmat@chromium.org>

--- a/resourced/minijail/resourced.conf
+++ b/resourced/minijail/resourced.conf
@@ -87,6 +87,8 @@ mount = tmpfs,/var,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
 # Need write access to /var/lib/metrics for reporting UMA metrics.
 bind-mount = /var/lib/metrics,,1
 
+bind-mount = /sys/kernel/debug/sched,,1
+
 # User.
 u = resourced
 
