--- a/crosh/Cargo.toml
+++ b/crosh/Cargo.toml
@@ -35,6 +35,7 @@ rustyline = "9.1.1"
 metrics_rs = { path = "../metrics/rust-client", optional = true } # provided by ebuild
 shell-words = "1.0.0"
 signal-hook-registry = "*"
+syslog = "6.0.1"
 system_api = { path = "../system_api" } # provided by ebuild
 textwrap = "0.11.0"
 tlsdate_dbus = { path = "../../third_party/tlsdate" } # provided by ebuild
