typecd: init: fix exec statement
Using \ before the last (empty) line of the file makes no sense.
Clean it up to simplify.

BUG=None
TEST=CQ passes

Change-Id: I7ab429d2ace5bd2c0e5437afe0d65bb6218a0e0d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5417974
Commit-Queue: Jameson Thies <jthies@google.com>
Tested-by: Mike Frysinger <vapier@chromium.org>
Auto-Submit: Mike Frysinger <vapier@chromium.org>
Reviewed-by: Jameson Thies <jthies@google.com>
Commit-Queue: Mike Frysinger <vapier@chromium.org>

--- a/typecd/init/typecd.conf
+++ b/typecd/init/typecd.conf
@@ -20,5 +20,5 @@ oom score -100
 # so set a limit for 5x that.
 limit as 100000000 unlimited
 
-exec minijail0 --config /usr/share/minijail/typecd.conf                      \
-  -- /usr/bin/typecd                                                         \
+exec minijail0 --config /usr/share/minijail/typecd.conf \
+  -- /usr/bin/typecd
