crash: Utilize full path for croslog when generating Chrome crash
To ensure proper generation of system logs (syslog) when the Chrome
browser crashes, specify the full path to the croslog utility. This is
especially important when the crash_reporter is executed from a process
that lacks the /usr/sbin directory in its PATH environment variable,
such as the Chrome process.

BUG=b:332581130
TEST=Open chrome://inducebrowsercrashforrealz in a tab to crash the
browser process. Go to /home/chronos/crash and gunzip xxx.chrome.txt.gz
and make sure  the section “===syslog (tail)===” contains valid logs.

Change-Id: Ic3e4bd5c582f4e57fd37b1756fa9b89adb161478
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5421110
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>
Commit-Queue: Kornel Dulęba <korneld@google.com>
Tested-by: Marek Maślanka <mmaslanka@google.com>

--- a/crash-reporter/crash_reporter_logs.conf
+++ b/crash-reporter/crash_reporter_logs.conf
@@ -54,7 +54,7 @@ chrome=\
     echo; \
   done; \
   echo "===syslog (tail)==="; \
-  croslog --since=-120 --lines=4000; \
+  /usr/sbin/croslog --since=-120 --lines=4000; \
   echo EOF; \
   echo ; \
   echo "===top 100 processes by memory==="; \
