--- a/minios/BUILD.gn
+++ b/minios/BUILD.gn
@@ -90,7 +90,10 @@ static_library("libminios") {
     "utils.cc",
   ]
   configs += [ ":target_defaults" ]
-  libs = [ "hwsec-foundation" ]
+  libs = [
+    "hwsec-foundation",
+    "vpd",
+  ]
   deps = [ ":minios_adaptors" ]
 }
 
