update_engine: Implement zstd payload compression
Utilize zstandard (zstd) compression for producing and consuming
delta/full payloads.

Compression ratio used is 22
(high compression ratios -- at the cost of speed)
The time to generate bump (slowdown) can be addressed by
hinting/optimizing the number of operations to perform.

All results are runs from hostmachine using:
 - AMD EPYC 7B12
 - 503GiB RAM

Results for brya `15753.10.0` -> `15839.0.0` test image:
  Before  | Time: 0:08:59.496089 | 1005255689 bytes (959MiB)
  Now     | Time: 0:11:57.333175 |  983793151 bytes (938MiB)
  Summary: 21462538 bytes (20.47MiB) saved

Results for brya `15770.0.0` -> `15839.0.0` test image:
  Before  | Time: 0:07:44.802273 | 933019571 bytes (890MiB)
  Now     | Time: 0:11:22.527596 | 901893049 bytes (860MiB)
  Summary: 31126522 bytes (30MiB) saved

Results for brya `15839.0.0` test image:
  Before  | Time: 0:00:52.966932 | 2124397331 bytes
  Now     | Time: 0:01:01.898253 | 2123942014 bytes
  Summary: 455317 bytes (444.65KiB) saved

BUG=b:319465510
TEST=FEATURES=test emerge-$B <PKG>
TEST=details above

Cq-Depend: chromium:5427728
Change-Id: If052f5b747e61356621336ec7acb36a3f921f6e9
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5425500
Commit-Queue: Jae Hoon Kim <kimjae@chromium.org>
Tested-by: Jae Hoon Kim <kimjae@chromium.org>
Reviewed-by: Yuanpeng Ni‎ <yuanpengni@chromium.org>

--- a/update_engine/BUILD.gn
+++ b/update_engine/BUILD.gn
@@ -58,6 +58,7 @@ pkg_config("target_defaults") {
     "USE_HWID_OVERRIDE=${use.hwid_override}",
     "USE_HW_DETAILS=${use.hw_details}",
     "USE_LVM_STATEFUL_PARTITION=${use.lvm_stateful_partition}",
+    "ZSTD_STATIC_LINKING_ONLY",
   ]
   include_dirs = [
     # We need this include dir because we include all the local code as
@@ -142,11 +143,13 @@ static_library("libpayload_consumer") {
     "payload_consumer/postinstall_runner_action.cc",
     "payload_consumer/verity_writer_stub.cc",
     "payload_consumer/xz_extent_writer.cc",
+    "payload_consumer/zstd_extent_writer.cc",
   ]
   configs += [ ":target_defaults" ]
   libs = [
     "bz2",
     "rt",
+    "zstd",
   ]
 
   # TODO(deymo): Remove unused dependencies once we stop including files
@@ -372,6 +375,7 @@ static_library("libpayload_generator") {
     "payload_generator/raw_filesystem.cc",
     "payload_generator/squashfs_filesystem.cc",
     "payload_generator/xz_chromeos.cc",
+    "payload_generator/zstd.cc",
   ]
   configs += [ ":target_defaults" ]
   all_dependent_pkg_deps = [
@@ -379,6 +383,7 @@ static_library("libpayload_generator") {
     "libbsdiff",
     "liblzma",
     "libpuffdiff",
+    "libzstd",
   ]
   deps = [
     ":libpayload_consumer",
@@ -531,6 +536,7 @@ if (use.test) {
       "payload_consumer/install_plan_unittest.cc",
       "payload_consumer/postinstall_runner_action_unittest.cc",
       "payload_consumer/xz_extent_writer_unittest.cc",
+      "payload_consumer/zstd_extent_writer_unittest.cc",
       "payload_generator/ab_generator_unittest.cc",
       "payload_generator/blob_file_writer_unittest.cc",
       "payload_generator/block_mapping_unittest.cc",
