--- a/cryptohome/libs/BUILD.gn
+++ b/cryptohome/libs/BUILD.gn
@@ -565,7 +565,8 @@ static_library("libcryptohome") {
     "../auth_factor/verifiers/scrypt.cc",
     "../auth_factor/verifiers/smart_card.cc",
     "../auth_factor/with_driver.cc",
-    "../auth_input_utils.cc",
+    "../auth_io/auth_input.cc",
+    "../auth_io/prepare_output.cc",
     "../challenge_credentials/challenge_credentials_constants.cc",
     "../challenge_credentials/challenge_credentials_decrypt_operation.cc",
     "../challenge_credentials/challenge_credentials_generate_new_operation.cc",
