shill: vpn: Remove MockVPNService
It's actually not used as a mock class. Replace it with a FakeVPNService
so that the caller doesn't need to create a VPNDriver by themselves.

BUG=b:332848438
TEST=FEATURES="test" emerge-$BOARD shill

Change-Id: Iaa5cbdf7f7fcfb2fe0ce19aca36504505bb1e24c
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5423209
Tested-by: Jie Jiang <jiejiang@chromium.org>
Reviewed-by: Taoyu Li <taoyl@chromium.org>
Commit-Queue: Jie Jiang <jiejiang@chromium.org>

--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -929,6 +929,7 @@ if (use.test) {
         "shims/environment.cc",
         "shims/environment_test.cc",
         "vpn/arc_vpn_driver_test.cc",
+        "vpn/fake_vpn_service.cc",
         "vpn/fake_vpn_util.cc",
         "vpn/ikev2_driver_test.cc",
         "vpn/ipsec_connection_test.cc",
@@ -938,7 +939,6 @@ if (use.test) {
         "vpn/mock_openvpn_management_server.cc",
         "vpn/mock_vpn_driver.cc",
         "vpn/mock_vpn_metrics.cc",
-        "vpn/mock_vpn_service.cc",
         "vpn/openvpn_driver_test.cc",
         "vpn/openvpn_management_server_test.cc",
         "vpn/third_party_vpn_driver_test.cc",
