system_api: add patchpanel traffic annotations
Create a traffic annotation message to describe the semantic of the
traffic sent through a socket. The traffic annotation can be transmitted
to patchpanel through the TagSocket to audit a socket.

BUG=b:331744250
TEST=emerge-$BOARD chromeos-base/system_api;
  FEATURES="test" emerge-$BOARD patchpanel patchpanel-client

Change-Id: I050f77c5487796a6e0f09f4d1f355117f1513dd4
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5431958
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Commit-Queue: Damien Dejean <damiendejean@google.com>
Reviewed-by: Hidehiko Abe <hidehiko@chromium.org>
Tested-by: Damien Dejean <damiendejean@google.com>

--- a/system_api/BUILD.gn
+++ b/system_api/BUILD.gn
@@ -694,7 +694,10 @@ proto_library("system_api-chunneld-protos") {
 proto_library("system_api-patchpanel-protos") {
   proto_in_dir = "dbus/patchpanel"
   proto_out_dir = "include/patchpanel/proto_bindings"
-  sources = [ "${proto_in_dir}/patchpanel_service.proto" ]
+  sources = [
+    "${proto_in_dir}/patchpanel_service.proto",
+    "${proto_in_dir}/traffic_annotation.proto",
+  ]
   standalone = true
   install_package = true
   use_pic = true
@@ -703,7 +706,10 @@ proto_library("system_api-patchpanel-protos") {
 goproto_library("system_api-patchpanel-goprotos") {
   proto_in_dir = "dbus/patchpanel"
   proto_out_dir = "go/src/"
-  sources = [ "${proto_in_dir}/patchpanel_service.proto" ]
+  sources = [
+    "${proto_in_dir}/patchpanel_service.proto",
+    "${proto_in_dir}/traffic_annotation.proto",
+  ]
 }
 
 proto_library("system_api-anomaly_detector-protos") {
