crosh: Add metrics feature to unblock cargo workflow.
Metrics were added to crosh but the metrics library isn't included in
the SDK, so put the metrics behind a default feature flag so it can be
disabled when developing crosh locally.

BUG=None
TEST=cargo test --no-default-features

Change-Id: Id9f49008b0d469e34f3dbf541fd8be20ba72cd7e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5428672
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Commit-Queue: Allen Webb <allenwebb@google.com>
Tested-by: Allen Webb <allenwebb@google.com>

--- a/crosh/Cargo.toml
+++ b/crosh/Cargo.toml
@@ -14,6 +14,10 @@ name = "crosh"
 [[bin]]
 name = "crosh"
 
+[features]
+default = ["metrics"]
+metrics = ["metrics_rs"]
+
 [dependencies]
 bitflags = "1.3.2"
 chrono = "0.4"
@@ -28,7 +32,7 @@ rand = "0.7"
 remain = "*"
 regex = "1.0.6"
 rustyline = "9.1.1"
-metrics_rs = { path = "../metrics/rust-client" } # provided by ebuild
+metrics_rs = { path = "../metrics/rust-client", optional = true } # provided by ebuild
 shell-words = "1.0.0"
 signal-hook-registry = "*"
 system_api = { path = "../system_api" } # provided by ebuild
