shill: add the NetworkManager class
We need a way to access all the alive Network instances. A simple way is
to create a new class that creates and tracks all the Network instances.
This CL adds the NetworkManager class for this purpose.

BUG=b:333466169
TEST=FEATURES=test emerge-brya shill

Change-Id: Ic8bc19087412219fa53e9929ef2d428141bcb498
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5432656
Reviewed-by: Jie Jiang <jiejiang@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Tested-by: Chih-Yu Huang <akahuang@chromium.org>
Commit-Queue: Chih-Yu Huang <akahuang@chromium.org>

--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -346,6 +346,7 @@ static_library("libshill") {
     "network/dhcpv4_config.cc",
     "network/icmp_session.cc",
     "network/network.cc",
+    "network/network_manager.cc",
     "network/network_monitor.cc",
     "network/portal_detector.cc",
     "network/slaac_controller.cc",
@@ -822,6 +823,7 @@ if (use.test) {
       "network/mock_tc_process.cc",
       "network/mock_throttler.cc",
       "network/mock_validation_log.cc",
+      "network/network_manager_test.cc",
       "network/network_monitor_test.cc",
       "network/network_test.cc",
       "network/portal_detector_test.cc",
