cryptohome: Add auth_session subdir
Similar to some prior cleanup CLs, this also tries to move more files
out of the top-level directory. In this case, all of the files related
to the AuthSession, which seem like a pretty good grouping.

BUG=none
TEST=FEATURES=test emerge-$BOARD cryptohome

Change-Id: I0ad371b542d73c8176cefd9e2755df5040d7965b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5434958
Reviewed-by: Zi Lin <lziest@google.com>
Commit-Queue: John Admanski <jadmanski@chromium.org>
Tested-by: John Admanski <jadmanski@chromium.org>

--- a/cryptohome/libs/BUILD.gn
+++ b/cryptohome/libs/BUILD.gn
@@ -497,10 +497,10 @@ static_library("libcrostpm") {
     "../auth_blocks/tpm_not_bound_to_pcr_auth_block.cc",
     "../auth_factor/auth_factor.cc",
     "../auth_factor_vault_keyset_converter.cc",
-    "../auth_session.cc",
-    "../auth_session_flatbuffer.cc",
-    "../auth_session_manager.cc",
-    "../auth_session_protobuf.cc",
+    "../auth_session/auth_session.cc",
+    "../auth_session/flatbuffer.cc",
+    "../auth_session/manager.cc",
+    "../auth_session/protobuf.cc",
     "../create_vault_keyset_rpc_impl.cc",
     "../crypto.cc",
     "../crypto_error.cc",
