metrics: Add batch event storage implementation to replace single event writes.
BUG=b:309864573
TEST=CQ

Change-Id: Iaebde4c35619a26016b88077e8ecef23ea3aacf3
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5441166
Tested-by: Jong Ahn <jongahn@chromium.org>
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>
Commit-Queue: Jong Ahn <jongahn@chromium.org>

--- a/metrics/structured/BUILD.gn
+++ b/metrics/structured/BUILD.gn
@@ -85,6 +85,8 @@ source_set("libsm") {
 
 source_set("structured_metrics") {
   sources = [
+    "batch_event_storage.cc",
+    "batch_event_storage.h",
     "c_structured_metrics.cc",
     "event_base.cc",
     "event_base.h",
@@ -133,6 +135,7 @@ if (use.test) {
   }
   executable("structured_metrics_test") {
     sources = [
+      "batch_event_storage_test.cc",
       "lib/key_data_file_delegate_test.cc",
       "lib/persistent_proto_test.cc",
       "recorder_impl_test.cc",
