init: udev: Log to syslog/kmsg
Somewhere along the way in systemd-ization, udev's default logging
started preferring journald or console. We don't have journald, and the
console is just discarded by upstart. We want syslog -- or if for some
reason that's not available, kmsg.

BUG=b:153782996, b:332982643
TEST="Starting version 249" seen in /var/log/messages

Change-Id: I48017c1dce2c1425e92d7349f70099bdf48e8065
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5440676
Commit-Queue: Brian Norris <briannorris@chromium.org>
Reviewed-by: Matt Turner <msturner@google.com>
Tested-by: Brian Norris <briannorris@chromium.org>

--- a/init/upstart/udev.conf
+++ b/init/upstart/udev.conf
@@ -14,6 +14,10 @@ oom score never
 start on stopped pre-startup
 respawn
 
+# udevd uses systemd's "auto", which seems to prefer journald or console. We
+# want syslog (or kmsg, if necessary).
+env SYSTEMD_LOG_TARGET=syslog-or-kmsg
+
 # Create static device nodes from modules.devname.
 # This needs to complete before udev itself because udev's static_node rules
 # expect the nodes to already exist so it can chown/chgrp them.
