arc: Allow mojo proxy access mojo service manager
BUG=b:257018832
TEST=manuall test with ARC change

Change-Id: Ia4cc6deaa184931c152564c65ef713d18b5b00b3
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5442332
Reviewed-by: Ryo Hashimoto <hashimoto@chromium.org>
Commit-Queue: Shengsong Tan <sstan@chromium.org>
Tested-by: Shengsong Tan <sstan@chromium.org>
Reviewed-by: Chung-sheng Wu <chungsheng@google.com>

--- a/arc/vm/mojo_proxy/minijail/arcvm-server-proxy.conf
+++ b/arc/vm/mojo_proxy/minijail/arcvm-server-proxy.conf
@@ -33,3 +33,4 @@ mount = tmpfs,/run,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
 bind-mount = /dev/fuse
 bind-mount = /run/chrome/arc,/run/chrome
 bind-mount = /run/arcvm/mojo,/run/arcvm/mojo,1
+bind-mount = /run/mojo,/run/mojo
