crash: Collect memory usage data during browser hangs
Looking into the log from browser hangs most of them seem to be related
to memory pressure - the browser call trace often contains do_mem_abort.
Include the output of /proc/meminfo to get a general idea of memory
usage.

BUG=b:324016659
TEST=Trigger a browser hang and verify that the crash log contains new
entry.

Change-Id: Ib6d6c0b6a5508956f12d066dd474976779605b1e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5440160
Tested-by: Kornel Dulęba <korneld@google.com>
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>
Commit-Queue: Kornel Dulęba <korneld@google.com>

--- a/crash-reporter/crash_reporter_logs.conf
+++ b/crash-reporter/crash_reporter_logs.conf
@@ -93,6 +93,10 @@ browser_hang=\
   tail -30 /var/log/vmlog/vmlog.LATEST; \
   echo EOF; \
   echo ; \
+  echo "===meminfo==="; \
+  cat /proc/meminfo; \
+  echo EOF; \
+  echo ; \
   echo "===session_manager (tail)==="; \
   croslog --since=-60 --identifier="session_manager" | tail -100; \
   echo EOF
