regmon: Unit tests for regmon_impl
Add unit tests for the regmon_impl and modifies the constructors to
enable dependency injection, and mocking of the metrics reporter for the
tests.

BUG=b:333458508
TEST=cros_run_unit_tests --board=${BOARD} --packages chromeos-base/regmon

Change-Id: I047ec768b75fab1fbeea75bea08937400ac13094
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5443987
Tested-by: Chris Mullins <crmullins@chromium.org>
Commit-Queue: Chris Mullins <crmullins@chromium.org>
Reviewed-by: Ramya Gopalan <ramyagopalan@google.com>
Reviewed-by: Aiden Chiavatti <chiav@chromium.org>

--- a/regmon/BUILD.gn
+++ b/regmon/BUILD.gn
@@ -70,7 +70,10 @@ install_config("install_seccomp_policy") {
 
 if (use.test) {
   pkg_config("target_test") {
-    pkg_deps = [ "libchrome-test" ]
+    pkg_deps = [
+      "libbrillo-test",
+      "libchrome-test",
+    ]
   }
 
   executable("regmond_testrunner") {
@@ -84,6 +87,7 @@ if (use.test) {
       "//common-mk/testrunner",
       "//regmon/daemon:unit_tests",
       "//regmon/metrics:unit_tests",
+      "//regmon/regmon:unit_tests",
     ]
   }
 }
