--- a/init/upstart/boot-services.conf
+++ b/init/upstart/boot-services.conf
@@ -27,13 +27,15 @@ author          "chromium-os-dev@chromium.org"
 #   * A basic filesystem corresponding to the requirements of the
 #     Linux FHS is available.
 #   * Messages can be logged via syslog based services.
+#   * Segmentation level has been checked and is available to any
+#     services.
 
 # Not a real job; just propagates events.
 oom score never
 
 # This 'start on' stanza assumes 'udev-trigger-early' depends on
 # 'udev-boot'/'udev' and 'boot-splash' depends on 'udev-trigger-early'.
-start on stopped startup and stopped boot-splash
+start on stopped startup and stopped boot-splash and stopped libsegmentation
 stop on stopping pre-shutdown
 
 # We purposely omit the main process.  upstart marks us running
