vm_tools: sommelier: Add Chromium-like logging macros and functions
This adds simple functions to print messages in various levels.
To print the messages, Sommelier needs to be built with
-Dlog_level=X with some number.

Example usage:

```
LOG(INFO) << window << " says hello world";
LOG(INFO) << "hello world";
```

BUG=b:328699937,b:331688838
TEST=N/A

Change-Id: Ie06fb1678b27320648cfd300beefdcaddb35441e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5464981
Reviewed-by: Chloe Pelling <cpelling@google.com>
Tested-by: Max Lee <endlesspring@google.com>
Commit-Queue: Max Lee <endlesspring@google.com>

--- a/vm_tools/sommelier/BUILD.gn
+++ b/vm_tools/sommelier/BUILD.gn
@@ -121,6 +121,7 @@ static_library("libsommelier") {
     "sommelier-gtk-shell.cc",
     "sommelier-idle-inhibit-manager.cc",
     "sommelier-inpututils.cc",
+    "sommelier-logging.cc",
     "sommelier-output.cc",
     "sommelier-pointer-constraints.cc",
     "sommelier-relative-pointer-manager.cc",
