patchpanel: Refactor AddressService
Better encapsulation, and support setting multiple IPv6 addresses at
once.

BUG=b:235050937
TEST=unit

Change-Id: Ib3f653a8b9e9d33ee712b6a717c17a3eabbce849
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5444909
Commit-Queue: Taoyu Li <taoyl@chromium.org>
Tested-by: Taoyu Li <taoyl@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>

--- a/patchpanel/BUILD.gn
+++ b/patchpanel/BUILD.gn
@@ -343,6 +343,8 @@ if (use.test) {
       "multicast_metrics_test.cc",
       "ndproxy_test.cc",
       "net_util_test.cc",
+      "network/address_service_test.cc",
+      "network/mock_address_service.cc",
       "network/mock_network_applier.cc",
       "network/mock_routing_policy_service.cc",
       "network/mock_routing_table.cc",
