vm_tools: Allow chronos to start vm_concierge
We will defer the start timing of vm_concierge service after a user
session is started but ARCVM may be requested to start earlier than
concierge.
This CL allows the user "chronos" to start vm_concierge from Chrome
browsers in case of such situations.

BUG=b:333628230
TEST=Starting vm_concierge service from Chrome succeeded.

Change-Id: I0c439969587499c9d868e3f88a6aeda0d49fdd02
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5445662
Reviewed-by: Junichi Uekawa <uekawa@chromium.org>
Tested-by: Ryuichiro Chiba <chibar@chromium.org>
Commit-Queue: Ryuichiro Chiba <chibar@chromium.org>

--- a/vm_tools/dbus/org.chromium.VmConcierge.conf
+++ b/vm_tools/dbus/org.chromium.VmConcierge.conf
@@ -66,4 +66,15 @@
            send_interface="org.chromiumm.Vmconcierge"
            send_member="DetachNetDevice" />
   </policy>
+  <!--
+    Allow Chrome to start vm_concierge in case that concierge hasn't started
+    when Chrome tries to start ARCVM.
+  -->
+  <policy user="chronos">
+    <allow send_destination="com.ubuntu.Upstart"
+           send_interface="com.ubuntu.Upstart0_6.Job"
+           send_type="method_call"
+           send_member="Start"
+           send_path="/com/ubuntu/Upstart/jobs/vm_5fconcierge" />
+  </policy>
 </busconfig>
