camera: Add latency metrics in feature benchmark
BUG=b:311138279
TEST=/usr/bin/cros_camera_feature_benchmark
TEST=tast run <dut> camera.PNPFeatureBenchmark.face_detection_1080p

Change-Id: I169f82deaece63d06c4e102cbea13a902bfc8c5d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5431573
Tested-by: Esker Wong <esker@google.com>
Reviewed-by: Ryota Okuji <okuji@chromium.org>
Commit-Queue: Esker Wong <esker@google.com>

--- a/camera/feature_benchmark/BUILD.gn
+++ b/camera/feature_benchmark/BUILD.gn
@@ -22,6 +22,7 @@ executable("cros_camera_feature_benchmark") {
   sources = [
     "//camera/feature_benchmark/benchmark_runner.cc",
     "//camera/feature_benchmark/benchmark_runner_main.cc",
+    "//camera/feature_benchmark/metrics.cc",
   ]
   configs += [ ":target_defaults" ]
   install_path = "bin"
