camera: diagnostics: Connect to CrosCameraController
Camera diagnostics service can now call CrosCameraController mojo APIs
to start|stop streaming and request frames.

This completes the flow for |CameraIssue::kCameraServiceDown|.

BUG=b:304911893
TEST=/usr/local/bin/cros_camera_diagnostics_test

Change-Id: Ie1a8bea230183f4582fc1489c5cfe33faff41f5f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5447813
Commit-Queue: Imran Ziad <imranziad@chromium.org>
Reviewed-by: Ryota Okuji <okuji@chromium.org>
Tested-by: Imran Ziad <imranziad@chromium.org>

--- a/camera/diagnostics/BUILD.gn
+++ b/camera/diagnostics/BUILD.gn
@@ -27,6 +27,7 @@ executable("cros_camera_diagnostics_service") {
     "camera_diagnostics_processor.cc",
     "camera_diagnostics_server.cc",
     "camera_diagnostics_session.cc",
+    "camera_service_controller.cc",
     "dirty_lens_analyzer.cc",
   ]
   configs += [ "//camera/build:cros_camera_common" ]
