installer: Add disable_lvm_install mode for install
For devices that are migrating to LVM, we initially
leave the clobber/install modes to use plain ext4 stateful
partitions as an escape hatch.

BUG=b:232006113
TEST=build_image, chromeos-install --yes, DUT doesn't have
     LVM

Cq-Depend: chromium:5532550
Change-Id: If39a9a1a2d93bdef54151bebc772552d22714c64
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5531134
Commit-Queue: Sarthak Kukreti <sarthakkukreti@google.com>
Tested-by: Sarthak Kukreti <sarthakkukreti@google.com>
Reviewed-by: Gwendal Grignou <gwendal@chromium.org>

--- a/installer/BUILD.gn
+++ b/installer/BUILD.gn
@@ -4,7 +4,7 @@
 
 import("//common-mk/pkg_config.gni")
 
-if (use.lvm_stateful_partition) {
+if (use.lvm_stateful_partition && !use.disable_lvm_install) {
   action("chromeos_install_script") {
     inputs = [ "chromeos-install" ]
     outputs = [ "${root_gen_dir}/chromeos-install" ]
