thinpool_migrator: Add post migration cleanup
Once the migration is finished:

1. Trim the stateful filesystem to ensure that we have space to
create new logical volumes.

2. Cleanup the VPD state: this ensures that device can be reset to
ext4 and then be ready for migration again.

BUG=b:232006113
TEST=tast run statefulmigration.VaultCompat

Change-Id: I7add71b489d3a5a91bf097e7e5afa10edc200751
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5531135
Tested-by: Sarthak Kukreti <sarthakkukreti@google.com>
Reviewed-by: Gwendal Grignou <gwendal@chromium.org>
Commit-Queue: Sarthak Kukreti <sarthakkukreti@google.com>

--- a/thinpool_migrator/BUILD.gn
+++ b/thinpool_migrator/BUILD.gn
@@ -73,6 +73,11 @@ install_config("install_tmpfiles_config") {
   install_path = "tmpfilesd"
 }
 
+install_config("install_init") {
+  sources = [ "init/lvm-migration-trim.conf" ]
+  install_path = "upstart"
+}
+
 proto_library("migration_status_proto") {
   proto_in_dir = "./proto/"
   proto_out_dir = "include/thinpool_migrator"
