arc: Provision the Attestation DKCerts
This CL provisions the LibArc-Attestation
DK certs after the Early Boot Ended call.

With this CL:
1. Lib Arc-Attestation would be notified in a
non-blocking way to start provisioning the certs
by talking to the attestationd daemon.
2. Since this is a lengthy operation, it is best
to do this after the EarlyBootEnded call has completed
to prevent ARC boot waiting for a reply from Early Boot.

BUG=b:332317623
TEST=emerge-brya chromeos-base/arc-keymint
TEST=cros_workon_make --board=brya chromeos-base/arc-keymint --test
TEST=tast run $DUT arc.Boot.vm
TEST=Verified on device that EarlyBoot call does not hang

Change-Id: I2959ac6dcffaecae9b5e179c6e72b65c62154f53
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5448715
Commit-Queue: Vaibhav Raheja <vraheja@chromium.org>
Tested-by: Vaibhav Raheja <vraheja@chromium.org>
Reviewed-by: Kazuhiro Inaba <kinaba@chromium.org>
Reviewed-by: John L Chen <zuan@chromium.org>

--- a/arc/keymint/BUILD.gn
+++ b/arc/keymint/BUILD.gn
@@ -45,6 +45,7 @@ executable("arc-keymintd") {
     "keymint_server.cc",
     "main.cc",
   ]
+  libs = [ "arc-attestation" ]
   configs += [ ":boringssl_config" ]
   pkg_deps = [
     "libbrillo",
